[metadata]
name = graph_sdc
author = Zerong Xi
version = 0.1

[options]
install_requires = 
    numpy
    gym
    stable_baselines3[extra]
    pandas
    highway_env
    pprintpp
    pyyaml
packages=find:

[options.packages.find]
exclude =
    script
    config
    test
    job
    model
    tensorboard
